--- a/index.html
+++ b/index.html
@@ -3,9 +3,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="./index.css">
+    <title>Login</title>
 </head>
 <body>
-    teste    
+    <h1>Tela de login</h1>
+    <input type="text" placeholder="Usuário">
+    <input type="password" placeholder="Senha">
+    <button>Logar</button>
 </body>
 </html>
